--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!-- index.html: Example Integration -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Chatbot Demo</title>
-  <link rel="stylesheet" href="chatbot-style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chatbot with Tailwind</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Welcome to Our Research Group</h1>
-  <p>This is an example page with an embedded chatbot.</p>
+<body class="bg-gray-50 text-gray-900">
+  <h1 class="text-2xl font-bold p-6">Welcome to Our Research Group</h1>
+  <p class="px-6">This page includes a chatbot powered by TailwindCSS.</p>
 
   <script>
     window.ChatbotConfig = {
-      welcomeMessage: "Hello! How can I help you today?",
-      position: "bottom-right"
+      welcomeMessage: "👋 Hello! Ask me anything about our research!",
     };
   </script>
   <script src="chatbot-widget.js"></script>
