--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       welcomeMessage: "👋 Hello! Ask me anything about our research!",
     };
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="chatbot-widget.js"></script>
 </body>
 </html>
