--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
     <!-- Chatbot widget -->
-    <script src="chatbot-widget.js"></script>
+    <script src="src/chatbot-widget.js"></script>
   </body>
 </html>
