--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatbot Demo</title>
 
-    <link rel="stylesheet" href="dist/chatbot-widget.css" />
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-accent text-accent-foreground">
     <h1 class="text-2xl font-bold p-6">
@@ -19,6 +20,6 @@
         welcomeMessage: "👋 Hello! Ask me anything about our research!",
       };
     </script>
-    <script src="dist/chatbot-widget.min.js"></script>
+    <script src="chatbot-widget.js"></script>
   </body>
 </html>
