--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title>Chatbot Demo</title>
 
     <!-- Tailwind CSS -->
+    <style type="text/tailwindcss">
+      @import "tailwindcss";
+      @custom-variant dark (&:where(.dark, .dark *));
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-accent text-accent-foreground">
